--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "mongoose-paginate-v2": "^1.9.0",
+    "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
