--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -23,7 +24,9 @@
     "morgan": "^1.10.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
-    "pharmaceutical-dms": "file:.."
+    "pdfkit": "^0.14.0",
+    "pharmaceutical-dms": "file:..",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
